# mcp_server

./: .gitignore  marketplace.json
code-maintainer-mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
code-maintainer-mcp-server-rs/: Cargo.toml
code-maintainer-mcp-server-rs/admin-ui/: index.html  package-lock.json  package.json  vite.config.ts
code-maintainer-mcp-server-rs/admin-ui/src/: App.tsx  api.ts  types.ts
code-maintainer-mcp-server-rs/src/: admin_server.rs  diff.rs  fs_ops.rs  main.rs  mcp.rs  patch.rs  storage.rs  utils.rs
code-maintainer-mcp-server/src/: cli.ts  fs-ops.ts  patch.ts  server.ts  storage.ts  types.ts  utils.ts
project-journal-mcp-server-rs/: Cargo.toml
project-journal-mcp-server-rs/src/: dedupe.rs  main.rs  (+3 more)
shell-mcp-server/: README.md  package-lock.json  package.json
shell-mcp-server-rs/: Cargo.toml
sub-agent-router-mcp-server/: README.md  package-lock.json  package.json
sub-agent-router-mcp-server-rs/: Cargo.toml
sub-agent-router-mcp-server-rs/admin-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
sub-agent-router-mcp-server-rs/admin-ui/src/: App.tsx  api.ts  main.tsx  types.ts  vite-env.d.ts
sub-agent-router-mcp-server-rs/scripts/: run-admin.sh
sub-agent-router-mcp-server-rs/src/: admin_server.rs  catalog.rs  config_store.rs  job_store.rs  main.rs  marketplace.rs  registry.rs  runner.rs  selector.rs  server.rs  types.rs  utils.rs
task-mcp-server-rs/: Cargo.toml
task-mcp-servers/: README.md  package-lock.json  package.json
ui-prompt-mcp-server-rs/: Cargo.toml
(+54 files in other folders)
