[package]
name = "code-maintainer-mcp-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.6", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
pathdiff = "0.2"
